# SPIRV-viewer

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  FileAssoc.bat  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  SPIRV_Viewer.sln  SPIRV_Viewer.vcxproj  SPIRV_Viewer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini
RegEdit/: AssocReg.cpp  RegEdit.vcxproj  RegEdit.vcxproj.filters  SPIRV_Assoc.reg
RegEdit/Debug/: FileAssoc.ilk  vc140.idb
RegEdit/Debug/FileAssoc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FileAssoc.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RegEdit/Debug/RegEdit.tlog/: CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SPIRV_Viewer.dir/Debug/SPIRV_Viewer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SPIRV_Viewer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SPIRV_Viewer.dir/RelWithDebInfo/SPIRV_Viewer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SPIRV_Viewer.lastbuildstate  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SPIRV_Viewer.dir/Release/SPIRV_Viewer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SPIRV_Viewer.lastbuildstate  custombuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.write.1.tlog
Win32/Release/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
Win32/Release/ALL_BUILD/ALL_BUILD.tlog/: custombuild.write.1.tlog
Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog
include/: resource.h  tool_SPIRVviewer.hpp  tool_framework.hpp
lib/: OGLCompilerd.lib  OSDependentd.lib  glfw3.lib  glfw3d.lib  jsoncpp.lib  shaderc.lib
lib/include/cross/: spirv_cross.hpp  spirv_glsl.hpp
lib/shaderc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  add-copyright.vcxproj  add-copyright.vcxproj.filters  build-version.inc  build-version.vcxproj  build-version.vcxproj.filters  check-copyright.vcxproj  check-copyright.vcxproj.filters  cmake_install.cmake  shaderc.sln
lib/shaderc/examples/: CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
lib/shaderc/examples/online-compile/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  shaderc-online-compile.vcxproj  shaderc-online-compile.vcxproj.filters
lib/shaderc/glslc/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  glslc.vcxproj  glslc.vcxproj.filters  glslc_exe.vcxproj  glslc_exe.vcxproj.filters  glslc_file_test.vcxproj  glslc_file_test.vcxproj.filters  glslc_stage_test.vcxproj  glslc_stage_test.vcxproj.filters
lib/shaderc/glslc/Debug/: glslc.lib
lib/shaderc/glslc/Release/: glslc.lib
lib/shaderc/libshaderc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  libshaderc.sln  shaderc.vcxproj  shaderc.vcxproj.filters  shaderc_c_smoke_test.vcxproj  shaderc_c_smoke_test.vcxproj.filters  shaderc_combined_genfile.vcxproj  shaderc_combined_genfile.vcxproj.filters  shaderc_combined_shaderc_cpp_test.vcxproj  shaderc_combined_shaderc_test.vcxproj  shaderc_combined_shaderc_test.vcxproj.filters  shaderc_shaderc_cpp_test.vcxproj  shaderc_shaderc_cpp_test.vcxproj.filters  shaderc_shaderc_test.vcxproj
lib/shaderc/libshaderc_util/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  libshaderc_util.sln  shaderc_util.vcxproj  shaderc_util.vcxproj.filters  shaderc_util_compiler_test.vcxproj  shaderc_util_compiler_test.vcxproj.filters  shaderc_util_counting_includer_test.vcxproj  shaderc_util_counting_includer_test.vcxproj.filters  shaderc_util_file_finder_test.vcxproj  shaderc_util_file_finder_test.vcxproj.filters  shaderc_util_format_test.vcxproj  shaderc_util_format_test.vcxproj.filters  shaderc_util_io_test.vcxproj  shaderc_util_io_test.vcxproj.filters  shaderc_util_message_test.vcxproj  shaderc_util_message_test.vcxproj.filters  shaderc_util_mutex_test.vcxproj  shaderc_util_mutex_test.vcxproj.filters  shaderc_util_string_piece_test.vcxproj  shaderc_util_string_piece_test.vcxproj.filters  testdata.vcxproj  testdata.vcxproj.filters
resources/: default_shader.vspv  deferred_geometry.vspv
source/: imgui_draw.cpp  imgui_impl_glfw_gl3.cpp  main.cpp  tool_SPIRVviewer.cpp  tool_framework.cpp
(+501 files in other folders)
